installed fs and request. working on getting a screenshot to work

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/sedillon93/CollisionReport#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "fs": "0.0.1-security",
+    "request": "^2.83.0"
   }
 }
