--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.16.1",
     "fs": "0.0.1-security",
+    "nodemailer": "^4.1.2",
     "request": "^2.83.0"
   }
 }
