EMAIL WORKS!!! just need to figure out how to make it the form and image

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sedillon93/CollisionReport#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.1",
     "fs": "0.0.1-security",
     "nodemailer": "^4.1.2",
